--- a/src/at/dotti/intellij/plugins/jazz/settings/SettingsForm.form
+++ b/src/at/dotti/intellij/plugins/jazz/settings/SettingsForm.form
@@ -69,13 +69,15 @@
           <text value="Project Area"/>
         </properties>
       </component>
-      <component id="16be" class="javax.swing.JTextField" binding="projectArea">
+      <component id="5f1b6" class="javax.swing.JComboBox" binding="projectArea">
         <constraints>
           <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <editable value="false"/>
+        </properties>
       </component>
       <component id="a012" class="javax.swing.JButton" binding="testConnectionButton" default-binding="true">
         <constraints>
@@ -114,7 +116,7 @@
           <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Browse"/>
+          <text value="Refresh"/>
         </properties>
       </component>
     </children>
